--- a/index.html
+++ b/index.html
@@ -3,26 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music League Songs</title>
+    <title>Hard Times Music League Data</title>
     <link rel="icon" href="data:,">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: -apple-system, system-ui, sans-serif;
+            font-family: 'Inter', -apple-system, system-ui, sans-serif;
             padding: 20px;
             max-width: 1400px;
             margin: 0 auto;
             font-size: 14px;
             line-height: 1.4;
+            background-color: #121212;
+            color: #e1e1e1;
         }
 
         h1 {
             font-size: 32px;
-            margin-bottom: 30px;
+            margin-bottom: 10px;
+            font-weight: 600;
+        }
+
+        .subtitle {
+            font-size: 16px;
+            color: #888;
+            margin-bottom: 40px;
         }
 
         h2 {
             font-size: 24px;
             margin: 30px 0 20px;
+            font-weight: 600;
         }
 
         /* Top 50 Artists Table */
@@ -31,7 +42,7 @@
         }
 
         #artists-table {
-            background-color: #fffbeb;
+            background-color: rgba(255, 251, 235, 0.05);
             border-radius: 8px;
             overflow: hidden;
         }
@@ -41,33 +52,34 @@
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
-            background-color: white;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+            background-color: #1e1e1e;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.3);
         }
 
         caption {
             font-size: 20px;
-            font-weight: bold;
+            font-weight: 600;
             text-align: left;
             padding: 15px;
-            background-color: #f8f9fa;
-            border-bottom: 2px solid #dee2e6;
+            background-color: #252525;
+            border-bottom: 2px solid #333;
         }
 
         th, td {
-            padding: 12px 15px;
+            padding: 8px 15px;
             text-align: left;
-            border-bottom: 1px solid #dee2e6;
+            border-bottom: 1px solid #333;
         }
 
         th {
-            background-color: #f8f9fa;
-            font-weight: bold;
+            background-color: #252525;
+            font-weight: 500;
             font-size: 15px;
+            color: #fff;
         }
 
         tr:hover {
-            background-color: #f8f9fa;
+            background-color: #252525;
         }
 
         /* Add spacing between submission tables */
@@ -78,11 +90,13 @@
         /* Make the content tables slightly smaller */
         #tables-container td {
             font-size: 13px;
+            color: #e1e1e1;
         }
     </style>
 </head>
 <body>
-    <h1>Music League Submissions</h1>
+    <h1>🥾 Hard Times Music League Data</h1>
+    <div class="subtitle">A collection of submissions from the Hard Times Music League</div>
     
     <div id="top-artists">
         <h2>Top 50 Most Submitted Artists</h2>
