--- a/index.html
+++ b/index.html
@@ -6,29 +6,17 @@
     <title>Hard Times Music League Data</title>
     <link rel="icon" href="data:,">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>🥾 Hard Times Music League Data</h1>
     <div class="subtitle">A collection of submissions from the Hard Times Music League</div>
     
-    <div id="top-artists">
-        <h2>Top 100 Most Submitted Artists</h2>
-        <table id="artists-table">
-            <thead>
-                <tr>
-                    <th>Rank</th>
-                    <th>Artist</th>
-                    <th>Submissions</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-    </div>
-    
     <div id="tables-container"></div>
 
-    <script src="js/parsers.js"></script>
+    <script src="js/dataManager.js"></script>
+    <script src="js/uiComponents.js"></script>
     <script src="js/tableBuilder.js"></script>
     <script src="js/main.js"></script>
 </body>
